# cat-dog-classifier

./: Dockerfile  README.md  app.py  model.py  pyproject.toml  requirements.txt  requirments.txt
.github/workflows/: ci.yml
tests/: test _ model.py  test_model.py
