[build-system]
requires = ["setuptools>=45","wheel"]
build-backend = "setuptools.build_meta"

[project]
name ="cat-dog-classifier"
version ="1.0.0"
description ="A web app for cat vs dog classification"
requires-python = ">=3.8"
dependencies = [
    "torch==2.0.1", 
    "torchvision==0.15.2", 
    "Pillow==10.0.0",
    "streamlit==1.28.0",
    "pytest==7.4.0"
]